--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -3,43 +3,43 @@
 }
 
 @font-face {
-  font-family: 'Inter-Regular';
-  src: url('../fonts/Inter-Regular.woff') format('woff'),
-    url('../fonts/Inter-Regular.woff2') format('woff2');
-  font-weight: 400;
+  font-family: 'BonaNova-Italic';
+  src: url('../fonts/BonaNova-Italic.woff') format('woff'),
+    url('../fonts/BonaNova-Italic.woff2') format('woff2');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Inter-Medium';
-  src: url('../fonts/Inter-Medium.woff') format('woff'),
-    url('../fonts/Inter-Medium.woff2') format('woff2');
-  font-weight: 500;
+  font-family: 'ALSHauss-Book';
+  src: url('../fonts/ALSHauss-Book.woff') format('woff'),
+    url('../fonts/ALSHauss-Book.woff2') format('woff2');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'PlayfairDisplay-Black';
-  src: url('../fonts/PlayfairDisplay-Black.woff') format('woff'),
-    url('../fonts/PlayfairDisplay-Black.woff2') format('woff2');
-  font-weight: 900;
+  font-family: 'ALSHauss-Regular';
+  src: url('../fonts/ALSHauss-Regular.woff') format('woff'),
+    url('../fonts/ALSHauss-Regular.woff2') format('woff2');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'PlayfairDisplay-Bold';
-  src: url('../fonts/PlayfairDisplay-Bold.woff') format('woff'),
-    url('../fonts/PlayfairDisplay-Bold.woff2') format('woff2');
-  font-weight: 700;
+  font-family: 'ALSHauss-Medium';
+  src: url('../fonts/ALSHauss-Medium.woff') format('woff'),
+    url('../fonts/ALSHauss-Medium.woff2') format('woff2');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 body {
-  font-family: 'Inter-Regular', sans-serif;
+  font-family: 'ALSHauss-Book', sans-serif;
 }
 
 .container {
@@ -70,26 +70,26 @@ img {
   cursor: default;
 }
 
-@media (min-width: 992px) {
-  .link {
-    transition: color 0.3s;
+// @media (min-width: 992px) {
+//   .link {
+//     transition: color 0.3s;
 
-    &:hover {
-      color: #ffa17e;
-    }
-  }
+//     &:hover {
+//       color: #ffa17e;
+//     }
+//   }
 
-  .link,
-  .button {
-    cursor: pointer;
-  }
+//   .link,
+//   .button {
+//     cursor: pointer;
+//   }
 
-  .item {
-    transition: transform 0.3s, background 0.3s;
+//   .item {
+//     transition: transform 0.3s, background 0.3s;
 
-    &:hover {
-      transform: scale(1.1);
-      background: #FBF0EC;
-    }
-  }
-}
+//     &:hover {
+//       transform: scale(1.1);
+//       background: #FBF0EC;
+//     }
+//   }
+// }
