creating a project structure

--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,2 +1,9 @@
-header.header Привет!
-  p Привет!
+header.header
+  .container.header__container 
+    nav.navbar
+      a.logo(href='#')
+        img(src='img/logo.png')
+      ul.navbar__menu
+        li.navbar__item
+        li.navbar__item
+        li.navbar__item
