--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,9 +1,22 @@
 header.header
-  .container.header__container 
+  .container 
     nav.navbar
-      a.logo(href='#')
-        img(src='img/logo.png')
+      a.logo.navbar__logo(href='#')
+        img(src='img/logo.png' alt='Логотип компании')
       ul.navbar__menu
         li.navbar__item
+          a.link.navbar__link(href='#') Курсы
         li.navbar__item
+          a.link.navbar__link(href='#') Наймите выпускника
         li.navbar__item
+          a.link.navbar__link(href='#') Личный кабинет
+    .header__main
+      h1.title.header__title школа диджитал&nbsp;навыков от 
+        span практикующих 
+        | профессионалов
+      .header__video.video
+        .video__image
+          img(src="img/video.png", alt="Картинка-заглушка для видео") 
+        a.link.video__link(href="#")
+          p О школе 
+            span за 72 секунды
