--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,7 +1,90 @@
-.header {
-  font-family: 'ALSHauss-Book', sans-serif;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 200px;
 
-  p {
-    font-family: 'BonaNova-Italic', serif;
+  &__logo {
+    img {
+      width: 65px;
+      height: 64px;
+    }
+  }
+
+  &__menu {
+    display: flex;
+  }
+
+  &__item {
+    margin-left: 110px;
+  }
+
+  &__link {
+    font-size: 24px;
+    font-weight: 350;
+    letter-spacing: -1.25573px;
+  }
+}
+
+.header {
+  margin-top: 60px;
+
+  &__main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__title {
+    width: 923px;
+    margin-right: 30px;
+    font-family: 'ALSHauss-Regular', sans-serif;
+    font-weight: normal;
+    font-size: 80px;
+    line-height: 100%;
+    letter-spacing: -1.25573px;
+
+    span {
+      font-family: 'BonaNova-Italic', serif;
+    }
+  }
+}
+
+.video {
+  text-align: center;
+
+  &__image {
+    width: 400px;
+    margin: 0 auto 20px;
+  }
+
+  &__link {
+    position: relative;
+    display: inline-block;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #FEA430;
+      transform: scaleX(0);
+      transition: transform 0.2s;
+    }
+
+    &:hover::after {
+      transform: scaleX(1);
+    }
+
+    p {
+      font-size: 32px;
+      color: #FEA430;
+
+      span {
+        font-family: 'ALSHauss-Medium', sans-serif;
+        font-weight: 500;
+      }
+    }
   }
 }
