add: description section

--- a/src/pages/includes/index/description.pug
+++ b/src/pages/includes/index/description.pug
@@ -1,2 +1,18 @@
-include svg-1
-include svg-2
+section.description
+  .container
+    h2
+    ul.description__list
+      li.description__item
+        .description__image 
+          img(src="img/descr-image-01.png", alt="Картинка: мужчина и женщина с собачкой")
+        .description__text
+          p Каждый преподаватель это либо специалист нашей студии, либо владелец бизнеса
+          a.link.description__link(href="#") портфолио студии 
+      li.description__item
+        .description__image 
+          img(src="img/descr-image-02.png", alt="Картинка: мужчина с ключом в руке")
+        .description__text
+          p Мы не приглашаем именитых гостей ради заголовков
+          p У нас только практические знания для приобретения навыка
+
+
