--- a/src/pages/includes/index/about.pug
+++ b/src/pages/includes/index/about.pug
@@ -1,2 +1,20 @@
 section.about
   .container
+    h2.about__title За 3 года через нас прошло более 7 000 специалистов, среди которых сотрудники
+    ul.about__partners
+      li
+        img(src="img/logo-tnt.png", alt="Лого: ТНТ")
+      li
+        img(src="img/logo-coca-cola.png", alt="Лого: Кока-кола")
+      li
+        img(src="img/logo-splat.png", alt="Лого: Сплэт")
+      li
+        img(src="img/logo-black-star.png", alt="Лого: Блэк Стар")
+      li
+        img(src="img/logo-toyota.png", alt="Лого: Тойота")
+      li
+        img(src="img/logo-henkel.png", alt="Лого: Хенкель")
+      li
+        img(src="img/logo-baikal.png", alt="Лого: Байкал")
+      li
+        img(src="img/logo-ministry.png", alt="Лого: Министерство образования")
