add: media & responsive

--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -11,12 +11,18 @@ header.header
         li.navbar__item
           a.link.navbar__link(href='#') Личный кабинет
     .header__main
-      h1.title.header__title школа диджитал&nbsp;навыков от 
-        span практикующих 
+      h1.title.header__title школа
+        br 
+        | диджитал&nbsp;навыков
+        br 
+        | от&nbsp;
+        span практикующих
+        br
         | профессионалов
       .header__video.video
         .video__image
           img(src="img/video.png", alt="Картинка-заглушка для видео") 
         a.link.video__link(href="#")
-          p О школе 
-            span за 72 секунды
+          img(src="img/icons/play-icon.svg", alt="Иконка: кнопка вопроизведения")
+          |   О школе 
+          span за 72 секунды
