--- a/src/pages/includes/index/about.pug
+++ b/src/pages/includes/index/about.pug
@@ -1,6 +1,6 @@
 section.about
   .container
-    h2.about__title За 3 года через нас прошло более 7 000 специалистов, среди которых сотрудники
+    h2.about__title За 3 года через нас прошло более 7&nbsp;000 специалистов, среди которых сотрудники
     ul.about__partners
       li
         img(src="img/logo-tnt.png", alt="Лого: ТНТ")
