--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,9 +1,323 @@
-@media (max-width: 1199.98px) {}
+@media (max-width: 1199.98px) {
+  .container {
+    max-width: 90%;
+  }
 
-@media (max-width: 991.98px) {}
+  .header {
+    &__title {
+      font-size: 60px;
+    }
+  }
 
-@media (max-width: 767.98px) {}
+  .navbar {
+    &__link {
+      font-size: 22px;
+    }
+  }
 
-@media(max-width: 767.98px) and (orientation: landscape) {}
+  .video {
+    &__image {
+      width: 100%;
+    }
 
-@media (max-width: 576.98px) {}
+    &__link {
+      font-size: 28px;
+    }
+  }
+
+  .description {
+    &__text {
+      p {
+        font-size: 36px;
+      }
+    }
+
+    &__link {
+      font-size: 28px;
+    }
+  }
+
+  .about {
+    &__title {
+      width: 60%;
+      font-size: 36px;
+    }
+
+    &__partners {
+      width: 70%;
+    }
+  }
+}
+
+@media (max-width: 991.98px) {
+  .navbar {
+    margin-bottom: 100px;
+
+    &__item {
+      margin-left: 50px;
+    }
+
+    &__link {
+      font-size: 18px;
+    }
+
+    &__logo {
+      img {
+        width: 50px;
+        height: 50px;
+      }
+    }
+  }
+
+  .header {
+    &__main {
+      flex-direction: column;
+    }
+
+    &__title {
+      font-size: 54px;
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
+  }
+
+  .video {
+    &__image {
+      width: 90%;
+    }
+  }
+
+  .description {
+    &__item {
+      flex-direction: column;
+      margin-bottom: 50px;
+
+      &:nth-child(2) {
+        .description__image {
+          order: 0;
+        }
+      }
+    }
+
+    &__image {
+      width: 75%;
+    }
+
+    &__text {
+      width: 75%;
+      text-align: center;
+
+      p {
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  .about {
+    &__title {
+      margin-bottom: 50px;
+    }
+
+    &__partners {
+      justify-content: center;
+      width: 50%;
+
+      li {
+        flex: 0 1 50%;
+
+        &:nth-child(1) {
+          order: -2;
+          padding-left: 40px;
+        }
+
+        &:nth-child(5) {
+          order: -1;
+        }
+
+        &:nth-child(4) {
+          order: 1;
+        }
+
+        &:nth-child(6) {
+          order: 2;
+        }
+
+        &:nth-child(3) {
+          order: 3;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+  .navbar {
+    margin-bottom: 50px;
+  }
+
+  .header {
+    &__title {
+      font-size: 50px;
+    }
+  }
+
+  .video {
+    &__link {
+      font-size: 24px;
+    }
+  }
+
+  .description {
+    &__text {
+      p {
+        font-size: 32px;
+      }
+    }
+
+    &__link {
+      font-size: 24px;
+    }
+  }
+
+  .about {
+    &__title {
+      font-size: 32px;
+    }
+  }
+}
+
+// @media(max-width: 767.98px) and (orientation: landscape) {}
+
+@media (max-width: 576.98px) {
+  .container {
+    max-width: 85%;
+  }
+
+  .header {
+    margin-top: 97px;
+    margin-bottom: 120px;
+
+    &__title {
+      font-size: 32px;
+      align-self: flex-start;
+      line-height: 110%;
+      letter-spacing: 0.74427px;
+      margin-bottom: 50px;
+    }
+  }
+
+  .navbar {
+    margin-bottom: 66px;
+
+    &__logo {
+      margin-left: 20px;
+
+      img {
+        width: 30px;
+        height: 30px;
+      }
+    }
+
+    &__menu {
+      display: none;
+    }
+  }
+
+  .video {
+    width: 86%;
+
+    &__link {
+      font-size: 18px;
+
+      img {
+        display: inline;
+      }
+    }
+
+    &__image {
+      width: 100%;
+      margin-bottom: 26px;
+    }
+  }
+
+  .description {
+    margin-bottom: 114px;
+
+    &__item {
+      margin-bottom: 75px;
+    }
+
+    &__image {
+      width: 106%;
+      margin-left: 30px;
+      margin-bottom: 10px;
+    }
+
+    &__text {
+      width: 80%;
+
+      p {
+        font-size: 28px;
+        line-height: 105%;
+        margin-bottom: 0;
+      }
+    }
+
+    &__link {
+      font-size: 28px;
+      margin-top: 20px;
+    }
+  }
+
+  .about {
+    &__title {
+      width: 80%;
+      font-size: 28px;
+      line-height: 105%;
+    }
+
+    &__partners {
+      width: 100%;
+
+      li:nth-child(1) {
+        padding-left: 58px;
+        padding-top: 28px;
+      }
+
+      li:nth-child(5) {
+        padding-right: 10px;
+        padding-top: 10px;
+      }
+
+      li:nth-child(2) {
+        margin-top: -12px;
+        transform: scale(1.2);
+      }
+
+      li:nth-child(7) {
+        margin-top: -14px;
+        transform: scale(1.2);
+      }
+
+      li:nth-child(8) {
+        margin-top: -17px;
+      }
+
+      li:nth-child(4) {
+        margin-top: -17px;
+      }
+
+      li:nth-child(6) {
+        transform: scale(1.7);
+        padding-left: 9px;
+        margin-top: -6px;
+      }
+
+      li:nth-child(3) {
+        transform: scale(1.4);
+        padding-right: 27px;
+        margin-top: 5px;
+      }
+    }
+  }
+}
