--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -36,7 +36,6 @@
   }
 
   &__title {
-    width: 923px;
     margin-right: 30px;
     font-family: 'ALSHauss-Regular', sans-serif;
     font-weight: normal;
@@ -61,6 +60,17 @@
   &__link {
     position: relative;
     display: inline-block;
+    font-size: 32px;
+    color: #FEA430;
+
+    img {
+      display: none;
+    }
+
+    span {
+      font-family: 'ALSHauss-Medium', sans-serif;
+      font-weight: 500;
+    }
 
     &::after {
       content: "";
@@ -76,16 +86,6 @@
 
     &:hover::after {
       transform: scaleX(1);
-    }
-
-    p {
-      font-size: 32px;
-      color: #FEA430;
-
-      span {
-        font-family: 'ALSHauss-Medium', sans-serif;
-        font-weight: 500;
-      }
     }
   }
 }
