--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -89,3 +89,41 @@
     }
   }
 }
+
+.menu-button {
+  display: none;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  border: none;
+  background-color: $main-color;
+  cursor: pointer;
+  outline: none;
+
+  &__line {
+    width: 22px;
+    height: 2.2px;
+    background-color: $fonts-main-color;
+    margin-bottom: 5px;
+    border-radius: 1px;
+  }
+}
+
+.close-button {
+  display: none;
+  position: absolute;
+  z-index: 999999;
+  top: 0;
+  right: 1rem;
+  width: 2rem;
+  text-align: center;
+  border: none;
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, 0);
+  color: $main-color;
+  outline: none;
+  cursor: pointer;
+}
