--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -19,9 +19,27 @@
   }
 
   &__link {
+    position: relative;
+    display: inline-block;
     font-size: 24px;
     font-weight: 350;
     letter-spacing: -1.25573px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #ffffff;
+      transform: scaleX(0);
+      transition: transform 0.2s;
+    }
+
+    &:hover::after {
+      transform: scaleX(1);
+    }
   }
 }
 
@@ -55,6 +73,7 @@
   &__image {
     width: 400px;
     margin: 0 auto 20px;
+    cursor: pointer;
   }
 
   &__link {
